--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,56 @@
 * {
     font-family: Roboto, Arial, serif
 }
+
+body {
+    margin: 0;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+}
+
+.header, .footer, .hero {
+    background-color: #1F2937;
+    color: white;
+}
+
+.header, .footer {
+    height: 72px;
+    display: flex;
+}
+
+.header ul {
+    list-style-type: none;
+}
+
+.header a {
+    text-decoration: none;
+    color: white
+}
+
+.header {
+    display: flex;
+}
+
+.footer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: small
+}
+
+.hero {
+    display: flex;
+}
+
+.body2 {
+    display: flex;
+}
+
+.quotes {
+    background-color: #E5E7EB;
+}
+
+.body4 {
+    display: flex; 
+}
