--- a/styles.css
+++ b/styles.css
@@ -16,26 +16,37 @@ body {
 
 .header, .footer, .hero {
     background-color: #1F2937;
-    color: white;
 }
 
 .header, .footer {
     height: 72px;
     display: flex;
+    color: #F9FAF8
 }
 
-.header ul {
+ul {
     list-style-type: none;
+    margin: 0;
+    padding: 0
 }
 
 .header a {
     text-decoration: none;
-    color: white
+    color: #E5E7EB;
+    font-size: 18px;
 }
 
 .header {
     display: flex;
     justify-content: space-between;
+    padding-left: 120px;
+    padding-right: 120px
+}
+
+.logo {
+    font-size: 24px;
+    font-weight: bold;
+    
 }
 
 .links {
